k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: drv-demo
  namespace: drv-demo
  labels:
    app: drv-demo
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  selector:
    app: drv-demo
